Fixes overlapping icons on Profile page (#3858)
* fix overlapping icons

* linting

--- a/static/scss/profile.scss
+++ b/static/scss/profile.scss
@@ -130,9 +130,11 @@
     .col {
       &.user-credentials {
         width: 50%;
-
         vertical-align: middle;
         padding-bottom: 13px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
 
         &.row-padding {
           padding-top: 30px;
